Provide adapivity for login and register modals. Fix adapive nav bar animaion bug. Fix appearing from nowhere horizonal scrollbar in mobile format

--- a/store-prototype/src/services/Header/AdaptiveMenuModal/MenuModal.module.css
+++ b/store-prototype/src/services/Header/AdaptiveMenuModal/MenuModal.module.css
@@ -35,6 +35,7 @@
     justify-content: flex-start;
     transform: translateX(-100%);
     transition: transform 0.4s linear;
+    font-family: Ubuntu;
 }
 
 .modalContent.active{
@@ -115,7 +116,7 @@
     padding: 0px;
     margin: 0px;
     transform: translateY(0%);
-    transition: transform 0.6s linear;
+    transition: transform 0.6s cubic-bezier(0.17, 0.34, 0.58, 1);;
 }
 
 .navItem{
@@ -151,7 +152,7 @@
 }
 
 .modalContent .navContainer.dropActive{
-    transform: translateY(-35%);
+    transform: translateY(-120%);
 }
 
 .personalCabinetButtonWrapper:hover{
